# babaissolved

./: .dockerignore  .gitignore  ARCHITECTURE.md  Blog.MD  Dockerfile  HANDOVER.md  PUSH_TO_PERSONAL_GITHUB.md  README.md  ROADMAP.md  SUBMISSION_CHECKLIST.md  blog_draft.md  openenv.yaml  pyproject.toml  server.py
assets/blog/: blank.txt
levels/official/: t1_01_baba_is_you.txt  t1_02_step_up.txt  t1_03_corner_eval.txt  t2_01_wall_gap.txt  t2_02_around_wall.txt  t2_03_corridor_eval.txt  t3_01_push_rock.txt  t3_02_push_two.txt  t3_03_push_eval.txt  t4_01_break_stop.txt  t4_02_push_stop_aside.txt  t4_03_break_stop_eval.txt  t5_01_water_detour.txt  t5_02_sink_with_rock.txt  t5_03_water_eval.txt  t6_01_make_flag_win.txt  t6_02_make_rock_win.txt  t6_03_make_win_eval.txt  t7_01_become_rock.txt  t7_02_swap_you.txt  t7_03_drift_eval.txt  t8_01_key_door.txt  t8_02_grab_key_first.txt  t8_03_door_eval.txt
levels/templates/: schema_drift_01.txt  schema_drift_01.yaml  self_redefine_01.txt  self_redefine_01.yaml  tutorial_01.txt  tutorial_01.yaml  use_mention_01.txt  use_mention_01.yaml
notebooks/: colab_grpo_demo.ipynb
scripts/: build_official_levels.py  build_pybaba.sh  run_qwen_a100_grpo.sh  setup_vendor.sh
scripts/patches/: baba-is-auto-bindings.patch
src/baba_rlvr/: __init__.py
src/baba_rlvr/client/: __init__.py  (+1 more)
tests/: test_diverse_pcg.py  test_engine.py  test_map_writer.py  test_mechanics.py  test_official_levels.py  test_pcg.py  test_reward.py  test_server.py  test_solver.py  test_viz.py
unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothGRPOTrainer.py
(+33 files in other folders)
